# docs/api/clubspot.openapi.json
@@ -363,12 +363,25 @@
             }
           }
         ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CancelBookingRequest"
+              }
+            }
+          },
+          "required": true
+        },
         "responses": {
           "204": {
             "description": "No Content"
           },
           "404": {
             "description": "Not Found"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           }
         }
       }
@@ -1195,7 +1208,8 @@
           "price",
           "paidAmount",
           "status",
-          "cancelledAt"
+          "cancelledAt",
+          "cancellationReason"
         ],
         "type": "object",
         "properties": {
@@ -1244,6 +1258,12 @@
               "string"
             ],
             "format": "date-time"
+          },
+          "cancellationReason": {
+            "type": [
+              "null",
+              "string"
+            ]
           }
         }
       },
@@ -1449,6 +1469,17 @@
           "expired"
         ],
         "type": "string"
+      },
+      "CancelBookingRequest": {
+        "required": [
+          "reason"
+        ],
+        "type": "object",
+        "properties": {
+          "reason": {
+            "type": "string"
+          }
+        }
       },
       "ClubResponse": {
         "required": [
